Adding treatments, symptoms, information and assistance

--- a/public/webapp/feature/treatment/treatment.less
+++ b/public/webapp/feature/treatment/treatment.less
@@ -1,9 +1,9 @@
 @image-path: "../../resource/image";
 
-.food {
+.treatment {
   padding-top: 10px;
 
-  .food-results {
+  .treatment-results {
     .btn-group {
       button {
         margin-left: 1px !important;
@@ -12,6 +12,6 @@
     }
   }
 }
-.food-panel-heading {
+.treatment-panel-heading {
   margin-top: 20px;
 }
